# HAN-thesis

./: .atomignore  .gitignore  .gitmodules  .latexcfg  .tags  IHCreport.cls  build.sh  report.tex  structuralanalysis.sty  user.sty
.imdone/: config.json
appendices/: appendix-I.tex  appendix-aodbearingcap.tex  appendix-chrono_sensor.tex  appendix-ohCaptain.tex  appendix-propulsion_model.tex  appendix-pump.tex  appendix-python_kalman.tex  appendix-research_methods.tex  appendix-simulation.tex
frontmatter/: summary.tex
mainmatter/: ch1_introduction.tex  ch2_dredging_principles.tex  ch3_communication.tex  ch3_coverage_path_planning.tex  ch3_research.tex  ch3_sensors.tex  ch3_uncertainty.tex  ch4_concept_design.tex  ch5_design_validation.tex  ch6_conclusion.tex  ch_6_conclusion.tex
remarks/: final remarks.pdf.xopp
resources/: RoyalColors.sty  actors.drawio  cppnn.eps  customunits.def  gyroscope.eps  report.bib  strategy_decision_matrix.tex
resources/equations/: F_r.tex  Re.tex  c_t.tex  labda.tex  p_i.tex  p_man.tex  p_p.tex  p_ro.tex  p_rp.tex  p_s.tex  p_sm.tex  p_ss.tex  p_v.tex  psi_m.tex  v_p.tex  v_s.tex
resources/simulation/: CMakeLists.txt  ChCrawlerVehicle.cpp  ChCrawlerVehicle.h  ChHydraulicSteering.cpp  ChHydraulicSteering.h  Crawler.cpp  Crawler.h  CrawlerArchmidesTire.cpp  CrawlerArchmidesTire.h  CrawlerChassis.cpp  CrawlerChassis.h  CrawlerDriveline.cpp  CrawlerDriveline.h  CrawlerSimpleFluidPowertrain.cpp  CrawlerSimpleFluidPowertrain.h  CrawlerVehicle.cpp  CrawlerVehicle.h  HydraulicSteering.cpp  HydraulicSteering.h  crawlersim.cpp
(+33 files in other folders)
